--- a/.skhdrc
+++ b/.skhdrc
@@ -1,3 +1,4 @@
 alt - m : ~/scripts/activate-chrome.sh meet.google.com
 alt - c : ~/scripts/activate-chrome.sh calendar.google.com
 alt - e : ~/scripts/activate-chrome.sh mail.google.com
+alt - space : ~/scripts/microphone-meet.sh
